# python-project-50

./: .gitignore  Makefile  README.md  Step4  pyproject.toml
gendiff/: __init__.py  cli.py  core.py  gendiff.py
scripts/: gendiff.py
tests/: Step4  test_gendiff
